<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="frameNineVM" type="com.emmanuelsapplication.app.modules.framenine.data.viewmodel.FrameNineVM"/>
    </data>
    <FrameLayout android:id="@+id/frameStackplaceyourdesi"
        android:layout_height="match_parent" android:layout_width="match_parent">
        <ImageView android:id="@+id/imagePlaceyourDesi"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_placeyourdesi_827x400}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_placeyourdesi_827x400"/>
        <LinearLayout android:id="@+id/linearColumnframe"
            android:layout_gravity="top|center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_26pxv"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_26pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar android:gravity="start"
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowframe"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageButton android:background="@color/white_A700"
                        android:id="@+id/btnFrame"
                        android:layout_height="@dimen/_40pxh"
                        android:layout_width="@dimen/_38pxh"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_vector_black_900" tools:ignore="ContentDescription"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtEmailPreferenc"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_2pxv"
                        android:layout_marginStart="@dimen/_63pxh"
                        android:layout_marginTop="@dimen/_11pxv"
                        android:layout_weight="0.8"
                        android:layout_width="0dp"
                        android:letterSpacing="0.01"
                        android:singleLine="true"
                        android:text="@{frameNineVM.frameNineModel.txtEmailPreferenc}"
                        style="@style/txtDosissemibold20" tools:text="@string/msg_email_preferenc2"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnundrawfilterr"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_35pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStyle">
                <ImageView android:gravity="center_horizontal"
                    android:id="@+id/imageUndrawfilterr"
                    android:layout_height="@dimen/_275pxh"
                    android:layout_marginStart="@dimen/_3pxh"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_undrawloading"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_undrawloading"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtChoosetopicst"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{frameNineVM.frameNineModel.txtChoosetopicst}"
                    style="@style/txtDosissemibold28" tools:text="@string/msg_choose_topics_t"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowgrouptwo"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_marginTop="@dimen/_20pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageButton
                        android:background="@drawable/rectangle_border_black_900"
                        android:id="@+id/btnGroupTwo"
                        android:layout_height="@dimen/_25pxh"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_width="@dimen/_25pxh"
                        android:paddingHorizontal="@dimen/_3pxh"
                        android:paddingVertical="@dimen/_3pxv"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_group2" tools:ignore="ContentDescription"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtStrathmoreComm"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_28pxh"
                        android:layout_weight="0.91"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{frameNineVM.frameNineModel.txtStrathmoreComm}"
                        style="@style/txtMulishromanregular20" tools:text="@string/msg_strathmore_comm3"/>
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatCheckBox
                    android:buttonTint="@color/black_900"
                    android:ellipsize="end"
                    android:fontFamily="@font/mulish"
                    android:id="@+id/checkBoxICTServices"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="wrap_content"
                    android:paddingStart="@dimen/_27pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_ict_services"
                    android:textColor="@color/gray_900"
                    android:textFontWeight="400"
                    android:textSize="@dimen/_20pxh"
                    android:textStyle="normal" tools:text="@string/lbl_ict_services"/>
                <androidx.appcompat.widget.AppCompatCheckBox
                    android:buttonTint="@color/black_900"
                    android:ellipsize="end"
                    android:fontFamily="@font/mulish"
                    android:id="@+id/checkBoxCareersJobAle"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="wrap_content"
                    android:paddingStart="@dimen/_27pxh"
                    android:paddingTop="@dimen/_1pxv"
                    android:singleLine="true"
                    android:text="@string/msg_careers_job_ale"
                    android:textColor="@color/gray_900"
                    android:textFontWeight="400"
                    android:textSize="@dimen/_20pxh"
                    android:textStyle="normal" tools:text="@string/msg_careers_job_ale"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowgroupone"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_marginTop="@dimen/_22pxv"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <ImageButton
                        android:background="@drawable/rectangle_border_black_900"
                        android:id="@+id/btnGroupOne"
                        android:layout_height="@dimen/_25pxh"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_width="@dimen/_25pxh"
                        android:paddingHorizontal="@dimen/_3pxh"
                        android:paddingVertical="@dimen/_3pxv"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_group2" tools:ignore="ContentDescription"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtStudentCouncil"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_28pxh"
                        android:layout_weight="0.85"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{frameNineVM.frameNineModel.txtStudentCouncil}"
                        style="@style/txtMulishromanregular20" tools:text="@string/lbl_student_council"/>
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnSave"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_19pxh"
                    android:layout_marginStart="@dimen/_19pxh"
                    android:layout_marginTop="@dimen/_74pxv"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.01"
                    android:paddingBottom="@dimen/_15pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_15pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_save"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded" tools:text="@string/lbl_save"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
